# checkpoint9

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/rviz/: config.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
custom_interfaces/: CMakeLists.txt  package.xml
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attachclient_component.hpp  attachserver_component.hpp  preapproach_component.hpp
my_components/launch/: attach_to_shelf.launch.py
my_components/src/: attachclient_component.cpp  attachserver_component.cpp  preapproach_component.cpp
